--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="arrayExample.js" charset="utf-8" ></script>
+    <script src="loopsExample.js" charset="utf-8"></script>
 
-    <title>Arrays Practical</title>
+    <title>Array & Loops Practical</title>
 </head>
 <body>
-    <h1>Arrays Practical</h1>
+    <h1>Array & Loop Practical</h1>
 </body>
 </html>
